--- a/SharedUI/Sites/GudnakSim/css/gudnakMenuStyles.css
+++ b/SharedUI/Sites/GudnakSim/css/gudnakMenuStyles.css
@@ -15,24 +15,24 @@ body {
 
 /* HEADER - Gudnak Banner Blocks */
 
-/* Use Gudnak-themed images or solid colors for the banner blocks */
+/* Use Gudnak tile artwork for the banner blocks */
 .block-1 { 
-    background-image: linear-gradient(135deg, #1a472a 0%, #2d6b46 100%);
+    background-image: url('/TCGEngine/Assets/Images/Gudnak-tile-1.webp');
     background-position: center 0px;
 }
 
 .block-2 { 
-    background-image: linear-gradient(135deg, #0f3a1f 0%, #1a5a34 100%);
+    background-image: url('/TCGEngine/Assets/Images/Gudnak-tile-2.webp');
     background-position: center 0px;
 }
 
 .block-3 { 
-    background-image: linear-gradient(135deg, #2d6b46 0%, #1a472a 100%);
+    background-image: url('/TCGEngine/Assets/Images/Gudnak-tile-3.webp');
     background-position: center 0px;
 }
 
 .block-4 { 
-    background-image: linear-gradient(135deg, #1a5a34 0%, #0f3a1f 100%);
+    background-image: url('/TCGEngine/Assets/Images/Gudnak-tile-1.webp');
     background-position: center 0px;
 }
 
